# pyromaniac

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
docs/: languages.md
pyrod/: Cargo.toml
pyrod/src/: init.rs  lib.rs  main.rs  service.rs
pyrod/src/run/: bash.rs  java.rs  mod.rs  python.rs  rust.rs  sh.rs
pyromaniac/: Cargo.toml
pyromaniac/src/: config.rs  main.rs  vm_client.rs
pyromaniac/src/api/: mod.rs
pyromaniac/src/runner/: firecracker.rs  mod.rs  pyrod_client.rs
pyromaniac/src/runner/firecracker/: config.rs  mod.rs
resources/: config.json
scripts/: copy-to-rootfs.sh  mkkernel.sh  mkrootfs.sh  pyrod
scripts/images/: Dockerfile.bash  Dockerfile.java  Dockerfile.python  Dockerfile.rust  Dockerfile.sh
