[package]
name = "pyrod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
libc = "0.2.147"
tarpc = { version = "0.33.0", features = ["full", "unix", "serde-transport"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-serde = "0.8.0"
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-vsock = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[lib]
name = "pyrod_service"
path = "src/lib.rs"

[[bin]]
name = "pyrod"
path = "src/main.rs"
